kubernetes/apps/default/vaultwarden/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: envoy-gateway-public
      namespace: network
      sectionName: https
  hostnames:
    - vw.egenintres.se
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
